README update for 1.2

--- a/README
+++ b/README
@@ -13,6 +13,7 @@ How to use it
 
 News
 ====
+* 12.07.2012 - Version 1.2 is out
 * 08.04.2012 - Version 1.1 is out
 * 25.02.2012 - Version 1.0 is out
 
@@ -20,8 +21,8 @@ Documentation
 =============
 Please see wiki: https://github.com/topolik/FSRepo/wiki
 
-Upgrade 1.0 -> 1.1
-------------------
+Upgrade instructions
+--------------------
 Please see https://github.com/topolik/FSRepo/wiki
 
 Installation
